--- a/css/styles.css
+++ b/css/styles.css
@@ -2,4 +2,7 @@ body {
   font-size: 10px;
   font-family: "Poiret One", monospace, sans-serif; }
 
+div {
+  height: 7rem; }
+
 /*# sourceMappingURL=styles.css.map */
